--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,76 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book App</title>
-  <link rel="stylesheet" href="../../styles/reset.css">
-  <link rel="stylesheet" href="../../styles/base.css">
-  <link rel="stylesheet" href="../../styles/layout.css">
-  <link rel="stylesheet" href="../../styles/modules.css">
-  <script src="https://kit.fontawesome.com/1224b18e51.js" crossorigin="anonymous"></script>
+<%- include('../layout/head') %>
+
+  <body>
+
+    <%- include('../layout/header') %>
+
+      <main>
+
+        <h1>
+          Number of Books : <%= count %>
+                
+        
+        </h1>
+
+        <% books.forEach(e=>{ %>
+          <section class="container">
+
+
+            <section class="img-section">
+
+              <a href="<%=e.url%>" target="_blank"><img src="<%= e.img %>" alt="Book Image"></a>
+
+            </section>
+
+            <h3>
+              <%= e.title %>
+            </h3>
+
+            <h4>
+              <%= e.author %>
+            </h4>
+
+            <button type="button"><a href="/books/<%=e.id%>">View Details</a> </button>
+
+
+          </section>
+
+          <% }); %>
 
 
 
 
-</head>
-
-<body>
-
-  <header>
-
-    <nav role="navigation">
+      </main>
 
 
-
-      <div id="menuToggle">
-
-        <input type="checkbox" />
-
-        <span></span>
-        <span></span>
-        <span></span>
-
-
-        <ul id="menu">
-          <a href="/">
-            <li>Home</li>
-          </a>
-          <a href="searches/new">
-            <li>Search</li>
-          </a>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="h1">
-
-      <h1>
-        Book App
-      </h1>
-
-    </div>
-
-
-
-  </header>
-
-
-  <main>
-
-    <h1>
-      Welcome to ASAC Books APP
-    </h1>
-
-    <!-- <a href="searches/new" class="indexAnch"> Search For Books</a> -->
-
-
-  </main>
-
-
-  <script src="../../js/app.js"></script>
-</body>
+      <script src="../../js/app.js"></script>
+  </body>
 
 </html>
