--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -1,61 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search</title>
-  <link rel="stylesheet" href="../../../styles/reset.css">
-  <link rel="stylesheet" href="../../../styles/base.css">
-  <link rel="stylesheet" href="../../../styles/layout.css">
-  <link rel="stylesheet" href="../../../styles/modules.css">
-  <script src="https://kit.fontawesome.com/1224b18e51.js" crossorigin="anonymous"></script>
-
-
-
-
-</head>
+<%- include('../../layout/head') %>
 
 <body>
 
-  <header>
-
-    <nav role="navigation">
+  <%- include('../../layout/header') %>
 
 
-
-      <div id="menuToggle">
-
-        <input type="checkbox" />
-
-        <span></span>
-        <span></span>
-        <span></span>
-
-
-        <ul id="menu">
-          <a href="/">
-            <li>Home</li>
-          </a>
-          <a href="searches/new">
-            <li>Search</li>
-          </a>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="h1">
-
-      <h1>
-        Best Books!
-      </h1>
-
-    </div>
-
-
-
-  </header>
 
   <main>
 
@@ -92,16 +44,9 @@
 
   </main>
 
-  <footer>
-    <ul>
-      <li><a href="https://www.linkedin.com/in/omar-ewies/" target="_blank"> <i class="fab fa-linkedin"></i>LinkedIn</a></li>
+  <%- include('../../layout/footer') %>
 
-      <li><a href="https://github.com/oebitw" target="_blank"> <i class="fab fa-github"></i> GitHub</a></li>
 
-      <li><a href="https://stackoverflow.com/users/story/15214052?newreg=a8ee98c0d013469399765dd01ea37366"target="_blank"><i class="fab fa-stack-overflow"></i> Stack Overflow</a> </li>
-
-    </ul>
-</footer>
 
 </body>
 
