--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -19,7 +19,7 @@
     </h4>
         
     <h4>
-        Book Shelf: <%= books.offShelf%>
+        Book Shelf: <%= books.offshelf %>
     </h4>
         
     <p>
