--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -37,7 +37,7 @@
         <input type="radio" name="search_by" value="author"> <br>
       </div>
 
-      <button type="submit"> Search the Google Books API </button>
+      <button type="submit" class="new_btn"> Search the Google Books API </button>
 
 
     </form>
