--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -59,7 +59,7 @@
                             <input name="isbn" value="<%= e.isbn %>" class="hidden">
                             <input name="offShelf" value="<%= e.offShelf %>" class="hidden">
                             <input name="url" value="<%= e.url %>" class="hidden">
-                            <button type="submit">Select This Book</button>
+                            <button type="submit"> Add to Favorite </button>
 
 
                         </form>
