--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -113,6 +113,19 @@ footer{
 }
 
 .hidden{
-  visibility: hidden;
+display: none;
 }
 
+
+#updateForm input, #updateForm textarea {
+  width: 50%;
+  font-size: 1.25rem;
+  background-color: white;
+  border: none;
+  color: black;
+  margin-top: 2.5rem;
+  margin-left: 25%;
+  padding: 1.25rem;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
